--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         },
         "noEmit": true,
         "strict": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "lib": ["ESNext"]
     },
     "references": [
         {
